--- a/README.Rmd
+++ b/README.Rmd
@@ -70,11 +70,11 @@ df[1,]
 # Still considered column subsetting
 df[1, drop = FALSE]
 ```
-It also helps with more complex array subsetting. In this casee, you also need to count higher dimensional subsetting in the `...`. Again, implicit dimensions should be returned as `NULL` to imply that they were counted but are missing.
+It also helps with more complex array subsetting. In this case, you also need to count higher dimensional subsetting in the `...`. Again, implicit dimensions should be returned as `NULL` to imply that they were counted but are missing. With array subsetting, you probably don't want `x[i]` to be interpreted as `x[,j]`, so you can turn that off with `column_transform = FALSE`.
 
 ```{r}
 `[.foo_array` <- function(x, i, j, ..., drop = FALSE) {
-  info <- collect_subscripts(i, j, ..., drop = drop)
+  info <- collect_subscripts(i, j, ..., drop = drop, column_transform = FALSE)
   str(info)
 }
 ```
@@ -82,6 +82,9 @@ It also helps with more complex array subsetting. In this casee, you also need t
 ```{r}
 x <- array(1:5)
 class(x) <- c("foo_array", class(x))
+
+# Not interpreted as `x[,j]`
+x[1]
 
 # Compare the following results, see the implicit `NULL` in the 3rd dimension?
 x[1, 2]
