Use github actions

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(
 # standardize
 
 <!-- badges: start -->
+[![Codecov test coverage](https://codecov.io/gh/DavisVaughan/standardize/branch/master/graph/badge.svg)](https://codecov.io/gh/DavisVaughan/standardize?branch=master)
+[![R build status](https://github.com/DavisVaughan/standardize/workflows/R-CMD-check/badge.svg)](https://github.com/DavisVaughan/standardize/actions)
 <!-- badges: end -->
 
 The goal of standardize is to ease the creation of data frame and array `[` methods by providing a way to standardize `i`, `j`, and `...` and provide information about the user's `[` call.
